# django-webp

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  test_settings.py
.github/workflows/: django.yml
django_webp/: context_processors.py  test.py  urls.py  utils.py  views.py
django_webp/management/commands/: clean_webp_images.py
django_webp/templates/django_webp/: index.html
django_webp/templatetags/: webp.py
django_webp/tests/: test_WEBPImageConverter.py  test_context_processor.py  test_main.py  test_templatetags.py  test_views.py
src/django_webp/: context_processors.py  middleware.py  utils.py
src/django_webp/management/commands/: clean_webp_images.py
src/django_webp/templatetags/: webp.py
testapp/: settings.py  urls.py  views.py  wsgi.py
tests/: test_WEBPImageConverter.py  test_context_processor.py  test_main.py  test_templatetags.py
tests/django_webp/: context_processors.py  utils.py
tests/django_webp/templatetags/: webp.py
tests/testapp/: asgi.py  settings.py
tests/testapp/templates/django_webp/: index.html
tests/testproj/testapp/: middleware.py  urls.py  utils.py
tests/testproj/testapp/management/commands/: clean_webp_images.py
tests/testproj/testapp/templates/django_webp/: index.html
tests/testproj/testapp/templatetags/: webp.py
tests/testproj/testproj/: asgi.py  settings.py  urls.py  wsgi.py
